--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>
         <h1>Git installed</h1>
         <h2>Status</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur expedita iure nemo modi ducimus. Temporibus culpa eveniet modi iusto ex.</p>
     </div>
 </body>
 </html>
